refactor:исправил согласно рекомендациям